--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <a class="users-gmail text-decoration-none text-white" href="" target="blank"></a>
             <p class="users-info-color fw-bold">Adres</p>
             <div class="d-flex justify-content-center flex-wrap">
-                <a class="users-location text-decoration-none p-2 border rounded-3 me-3 text-white" href="#" target="blank">goe location</a>
-                <a class="users-phone text-decoration-none p-2 border rounded-3 me-3 text-white" href="#" target="blank">phone number</a>
-                <a class="users-site text-decoration-none p-2 border rounded-3 mt-3 text-white" href="#" target="blank"> hildergard.org</a>
+                <a class="users-location z-index position-relative text-decoration-none p-2 border rounded-3 me-3 text-white" href="#" target="blank">goe location</a>
+                <a class="users-phone z-index position-relative text-decoration-none p-2 border rounded-3 me-3 text-white" href="#">phone number</a>
+                <a class="users-site z-index position-relative text-decoration-none p-2 border rounded-3 mt-3 text-white" href="#" target="blank"> hildergard.org</a>
             </div>
             <p class="users-info-color fw-bold">Company Info</p>
             <h3 class="users-company">Romaguera-Crona</h3>
