--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <template class="comments-temp">
         <li class="users-item position-relative p-4 mb-3 text-white rounded-3">
             <p class="comments-id users-id position-absolute">1</p>
-            <h2 class="comments-title users-info-color">Bret</h2>
+            <h2 class="comments-title position-relative users-info-color">Bret</h2>
             <a class="comments-gmail text-decoration-none text-white" href="" target="blank">dfsdfsd</a>
             <p class="comments-desc">jhcoisoisdn coisdncsd</p>
         </li>
